# twitter_trending_archive_api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
dags/: trending_ingestion.py
src/flaskr/: __init__.py
